--- a/nodeapi-mongoDB-IbmCloud/package.json
+++ b/nodeapi-mongoDB-IbmCloud/package.json
@@ -19,7 +19,9 @@
     "cfenv": "^1.1.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "hoek": "^4.2.1",
     "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.11",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^5.1.0",
     "passport": "^0.4.0",
